tests/ui/issues/issue-16966.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-16966.rs:2:12
   |
LL |     panic!(std::default::Default::default());
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
